--- a/index1.html
+++ b/index1.html
@@ -141,6 +141,7 @@
       </div>
       <div class="about-tattoo">
         <hr class="" />
+        <h1>All About Tattoos</h1>
         <div class="about-wrapper">
           <div class="">
             <h1>Uniquely Yours !</h1>
