--- a/index1.html
+++ b/index1.html
@@ -143,30 +143,30 @@
         <hr class="" />
         <h1>All About Tattoos</h1>
         <div class="about-wrapper">
-          <div class="">
+          <div class="box1">
             <h1>Uniquely Yours !</h1>
             <p class="">
               We'll pen down your imagination right in front of you into a
               unique tattoo design.
             </p>
           </div>
-          <div class="">
+          <div class="box2">
             <h1 class="">Tattoo Maintenance</h1>
             <p class="">
               A good tattoo doesn't only require a good artist, it also
               requires your time and effort you put to take care of your
               tattoo, so that it can be the best possible outcome.
             </p>
-            <div class="img"></div>
+
           </div>
-          <div class="">
-            <h1 class="">While getting a tatto !</h1>
+          <div class="box3">
+            <h1 class="">While getting a tattoo !</h1>
             <p class="">
               A good communication, being comfortable is important while
               getting Ink'd, we'll make sure you have both.
             </p>
           </div>
-          <div class="">
+          <div class="box4">
             <h1>Authentic tattoo flashes</h1>
             <p class="">
               Catch a sight of the lives of the artists from Ink serpent.
