--- a/index1.html
+++ b/index1.html
@@ -59,8 +59,6 @@
         A serpent You Can Trust !!. <br />
         Beauty comes in all shapes and sizes
       </p>
-      <br />
-      <br />
       <button class="btn btn-warning book_now">Book Now</button>
     </div>
   </section>
@@ -171,24 +169,24 @@
             <p class="">
               Catch a sight of the lives of the artists from Ink serpent.
             </p>
-            <a href="#" class="">Flashes</a>
+            <a href="#" class="btn btn-warning font-weight-bold">Flashes</a>
           </div>
         </div>
       </div>
     </div>
   </section>
   <section class="section4">
-    <div class="">
-      <h1 class="">Call Us To Learn More !</h1>
+    <div class="call_us">
+      <h1 class="">Call Us To Learn More!</h1>
       <button class="btn btn-warning">Contact Now</button>
     </div>
-    <div class="testimonial-wrapper">
-      <div class="">
+    <div class="testimonial_wrapper">
+      <div class="test_head">
         <h3 class="">Testimonials</h3>
         <p class="">Valuable replies from our client</p>
       </div>
       <div class="testimonial">
-        <div class="img-wrapper">
+        <div class="img_wrapper">
           <img src="geometric-landscape.jpg" class="img-fluid" />
         </div>
         <div class="review">
@@ -202,9 +200,10 @@
       </div>
     </div>
   </section>
-  <footer class="container-fluid foot">
-    <div class="container-fluid"></div>
-    <div class="container"></div>
+  <footer class="footer">
+    <div class="wrapper">
+
+    </div>
   </footer>
   <script src=""></script>
 </body>
