--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="EN">
 
 <head>
   <meta charset="utf-8" />
@@ -37,10 +37,7 @@
             <a class="nav-link linktxt text-info" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link linktxt" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link linktxt" href="#">Work</a>
+            <a class="nav-link linktxt" href="services.html">Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link linktxt" href="#">Gallery</a>
