--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     /> -->
+
+  <!-- Google font -->
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+
   <!----bootstrap---->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <!-- jQuery library -->
@@ -34,13 +38,10 @@
       <div class="collapse navbar-collapse text-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link linktxt text-info" href="#">Home</a>
+            <a class="nav-link linktxt text-info" href="index1.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link linktxt" href="services.html">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link linktxt" href="#">Gallery</a>
+            <a class="nav-link linktxt" href="work.html">Work</a>
           </li>
           <li class="nav-item">
             <a class="nav-link linktxt" href="#">Contact Us</a>
