--- a/index1.html
+++ b/index1.html
@@ -167,7 +167,7 @@
             <p class="">
               Catch a sight of the lives of the artists from Ink serpent.
             </p>
-            <a href="#" class="btn btn-warning font-weight-bold">Flashes</a>
+            <a href="work.html" class="btn btn-warning font-weight-bold">Flashes</a>
           </div>
         </div>
       </div>
