--- a/work.html
+++ b/work.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="grid_item">
                     <figure>
-                        <img src="images/1.jpg" width="100px" height="100px">
+                        <img src="1.jpg" width="100px" height="100px">
                         <figcaption>
                             2 CHAINZ
                         </figcaption>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="grid_item">
                     <figure>
-                        <img src="images/2.jpg" width="100px" height="100px">
+                        <img src="2.jpg" width="100px" height="100px">
                         <figcaption>
                             BUMBLE BEE
                         </figcaption>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="grid_item">
                     <figure>
-                        <img src="images/3.jpg" width="100px" height="100px">
+                        <img src="3.jpg" width="100px" height="100px">
                         <figcaption>
                             PSYCHEDELIC TIGER
                         </figcaption>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="grid_item">
                     <figure>
-                        <img src="images/4.jpg" width="100px" height="100px">
+                        <img src="4.jpg" width="100px" height="100px">
                         <figcaption>
                             Geometric Landscape
                         </figcaption>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="grid_item">
                     <figure>
-                        <img src="images/5.jpg" width="100px" height="100px">
+                        <img src="5.jpg" width="100px" height="100px">
                         <figcaption>
                             DOG LOVE
                         </figcaption>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="grid_item">
                     <figure>
-                        <img src="images/6.jpg" width="100px" height="100px">
+                        <img src="6.jpg" width="100px" height="100px">
                         <figcaption>
                             ROSE
                         </figcaption>
@@ -128,13 +128,13 @@
                 </div>
                 <div class="grid_item">
                     <figure>
-                        <img src="images/7.jpg" width="100px" height="100px">
+                        <img src="7.jpg" width="100px" height="100px">
                         <figcaption>Geometric Landscape</figcaption>
                     </figure>
                 </div>
                 <div class="grid_item">
                     <figure>
-                        <img src="images/8.jpg" width="100px" height="100px">
+                        <img src="8.jpg" width="100px" height="100px">
                         <figcaption>
                             Geometric Landscape
                         </figcaption>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="grid_item">
                     <figure>
-                        <img src="images/9.jpg" width="100px" height="100px">
+                        <img src="9.jpg" width="100px" height="100px">
                         <figcaption>
                             Geometric Landscape
                         </figcaption>
