--- a/work.html
+++ b/work.html
@@ -35,14 +35,11 @@
             </button>
             <div class="collapse navbar-collapse text-center" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link linktxt text-info" href="index1.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link linktxt" href="services.html">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link linktxt" href="#">Gallery</a>
+                    <li class="nav-item active">
+                        <a class="nav-link linktxt " href="work.html">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link linktxt" href="#">Contact Us</a>
