--- a/index1.html
+++ b/index1.html
@@ -14,6 +14,9 @@
   <!-- Google font -->
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
+  <!-- Font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+
   <!----bootstrap---->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <!-- jQuery library -->
@@ -28,8 +31,8 @@
 <body>
   <section class="section1">
     <nav class="navbar navbar-expand-sm navbar-dark navigation-bar">
-      <a class="lg-logo-txt" href="#"><img src="Silton Studios.jpg" class="mr-2" width="50px" height="50px" /><span
-          class="lg-txt">Ink Serpent</span></a>
+      <a class="lg-logo-txt" href="index1.html"><img src="Silton Studios.jpg" class="mr-2" width="50px"
+          height="50px" /><span class="lg-txt">Ink Serpent</span></a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +47,7 @@
             <a class="nav-link linktxt" href="work.html">Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link linktxt" href="#">Contact Us</a>
+            <a class="nav-link linktxt" href="contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -176,7 +179,8 @@
   <section class="section4">
     <div class="call_us">
       <h1 class="">Call Us To Learn More!</h1>
-      <button class="btn btn-warning">Contact Now</button>
+      <button class="btn btn-warning "><a class="text-dark font-weight-bold" href="contact.html">Contact
+          Now</a></button>
     </div>
     <div class="testimonial_wrapper">
       <div class="test_head">
