--- a/work.html
+++ b/work.html
@@ -42,7 +42,7 @@
                         <a class="nav-link linktxt " href="work.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link linktxt" href="#">Contact Us</a>
+                        <a class="nav-link linktxt" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
