--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <!-- <script src="https://use.fontawesome.com/d6753ee5f2.js"></script> -->
 
     <!-- Font awesome -->
-    <script src="js/all.min.js"></script>
+    <script src="all.min.js"></script>
 </head>
 
 <body>
