--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <h1>Professional tattoo experience</h1>
 
                         <p>a lot goes into a tattoo which creates an experience for the person who's getting the tattoo and being comfortable is the most important thing which our artists will make sure you are and will design your tattoo the way you want it only cooler, once were done with the design, we clean up and put on a new setup and start tattooing.</p>
-
+                        <a href="tel:+91-962-530-9435">Book An Appointment</a>
                     </div>
 
                 </div>
